--- a/plugin.xml
+++ b/plugin.xml
@@ -40,20 +40,30 @@ xmlns:android="http://schemas.android.com/apk/res/android"
             <clobbers target="Coordinates" />
         </js-module>
 
-        <js-module src="www/PositionError.js" name="PositionError">
-            <clobbers target="PositionError" />
-        </js-module>
+        <!-- <js-module src="www/PositionError.js" name="PositionError"> -->
+        <!--     <clobbers target="PositionError" /> -->
+        <!-- </js-module> -->
 
         <js-module src="www/Position.js" name="Position">
             <clobbers target="Position" />
         </js-module>
 
-        <js-module src="www/geolocation.js" name="geolocation">
+        <js-module src="www/android/geolocation.js" name="geolocation">
             <clobbers target="navigator.geolocation" />
+        </js-module>
+        <js-module src="www/geolocation.js" name="polyfill">
+            <runs />
+        </js-module>
+        <!-- We don't expose PositionError via clobber on Android as we use it internally only -->
+        <js-module src="www/PositionError.js" name="PositionError">
+            <runs />
         </js-module>
 
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="Geolocation">
+                <param name="android-package" value="org.apache.cordova.geolocation.Geolocation"/>
+            </feature>
+            <feature name="GeolocationPolyfill">
                 <param name="android-package" value="org.apache.cordova.geolocation.GeoBroker"/>
             </feature>
         </config-file>
@@ -63,17 +73,12 @@ xmlns:android="http://schemas.android.com/apk/res/android"
             <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
         </config-file>
 
-        <config-file target="res/xml/config.xml" parent="/*">
-            <feature name="Geolocation">
-                <param name="android-package" value="org.apache.cordova.geolocation.Geolocation" />
-            </feature>
-        </config-file>
-
         <source-file src="src/android/GeoBroker.java" target-dir="src/org/apache/cordova/geolocation" />
         <source-file src="src/android/GPSListener.java" target-dir="src/org/apache/cordova/geolocation" />
         <source-file src="src/android/NetworkListener.java" target-dir="src/org/apache/cordova/geolocation" />
         <source-file src="src/android/CordovaLocationListener.java" target-dir="src/org/apache/cordova/geolocation" />
         <source-file src="src/android/Geolocation.java" target-dir="src/org/apache/cordova/geolocation/" />
+        <source-file src="src/android/PermissionHelper.java" target-dir="src/org/apache/cordova/geolocation/" />
 
         <js-module src="www/android/geolocation.js" name="geolocation">
             <clobbers target="navigator.geolocation" />
